Move DeltaFile from common to core